Added UI Scripts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
         <!-- Load Phaser Library -->
         <script src="./lib/phaser.js"></script>
         <!-- Load All Other Scripts Here -->
-        
+        <!-- UI -->
+        <script src="./lib/UI/UIEffects.js" type="module"></script>
+        <script src="./lib/UI/Button.js" type="module"></script>
+        <script src="./lib/UI/Hud.js" type="module"></script>
+        <script src="./lib/UI/Menu.js" type="module"></script>
+        <script src="./lib/UI/UIManager.js"></script>
         <!-- Load Main Script -->
         <script src="./src/main.js"></script>
     </head>
