WIP UI Scenes broken

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <script src="./lib/UI/Hud.js" type="module"></script>
         <script src="./lib/UI/Menu.js" type="module"></script>
         <script src="./lib/UI/UIManager.js"></script>
+        <!-- Load Scenes -->
+        <script src="./src/Play.js"></script>
+        <script src="./src/Load.js"></script>
+        <script src="./src/PreLoad.js"></script>
         <!-- Load Main Script -->
         <script src="./src/main.js"></script>
     </head>
