--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
         <script src="./lib/phaser.js"></script>
         <!-- Load All Other Scripts Here -->
         <!-- UI -->
-        <script src="./lib/UI/UIEffects.js" type="module"></script>
-        <script src="./lib/UI/Button.js" type="module"></script>
-        <script src="./lib/UI/Hud.js" type="module"></script>
-        <script src="./lib/UI/Menu.js" type="module"></script>
+        <script src="./lib/UI/UIEffects.js"></script>
+        <script src="./lib/UI/Button.js"></script>
+        <script src="./lib/UI/Hud.js"></script>
+        <script src="./lib/UI/Menu.js"></script>
+        <script src="./src/menus/MainMenu.js"></script>
         <script src="./lib/UI/UIManager.js"></script>
         <!-- Load Scenes -->
         <script src="./src/Play.js"></script>
