Added combo menu to show combos. Empty implementation

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         <script src="./lib/UI/Button.js"></script>
         <script src="./lib/UI/Hud.js"></script>
         <script src="./lib/UI/Menu.js"></script>
+        <script src="./src/menus/ComboMenu.js"></script>
         <script src="./src/menus/MainMenu.js"></script>
         <script src="./lib/UI/UIManager.js"></script>
+        <script src="./src/Shape.js"></script>
         <!-- Load Scenes -->
-        <script src="./src/Play.js"></script>
+        <script src="./src/MainGame.js"></script>
         <script src="./src/Load.js"></script>
         <script src="./src/PreLoad.js"></script>
         <!-- Load Main Script -->
