--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <script src="./lib/UI/Menu.js"></script>
         <script src="./src/menus/ComboMenu.js"></script>
         <script src="./src/menus/MainMenu.js"></script>
+        <script src="./src/menus/CreditsMenu.js"></script>
         <script src="./lib/UI/UIManager.js"></script>
         <script src="./src/Shape.js"></script>
         <!-- Load Scenes -->
